@@ -353,6 +353,32 @@ ITEM_EVENT_ID = {
 	20050493: (14240000, 10260360), #若菜用スチームパンクハート
 	20050494: (14380000, 10260361), #白用スチームパンクハート
 	20050495: (14370000, 10260362), #黒用スチームパンクハート
+	#ウィッチハート
+	20050497: (10260000, 10260363), #桃用ウィッチハート
+	20050498: (10260051, 10260364), #藍用ウィッチハート
+	20050499: (10260050, 10260365), #緑用ウィッチハート
+	20050500: (10260052, 10260366), #山吹用ウィッチハート
+	20050501: (10260003, 10260367), #菫用ウィッチハート
+	20050502: (10260004, 10260368), #茜用ウィッチハート
+	20050503: (10260005, 10260369), #杏用ウィッチハート
+	20050504: (10260006, 10260370), #空用ウィッチハート
+	20050505: (14240000, 10260371), #胡桃用ウィッチハート
+	20050506: (14240000, 10260372), #若菜用ウィッチハート
+	20050507: (14380000, 10260373), #白用ウィッチハート
+	20050508: (14370000, 10260374), #黒用ウィッチハート
+	#バトラーハート
+	20050510: (10260000, 10260375), #桃用バトラーハート
+	20050511: (10260051, 10260376), #藍用バトラーハート
+	20050512: (10260050, 10260377), #緑用バトラーハート
+	20050513: (10260052, 10260378), #山吹用バトラーハート
+	20050514: (10260003, 10260379), #菫用バトラーハート
+	20050515: (10260004, 10260380), #茜用バトラーハート
+	20050516: (10260005, 10260381), #杏用バトラーハート
+	20050517: (10260006, 10260382), #空用バトラーハート
+	20050518: (14240000, 10260383), #胡桃用バトラーハート
+	20050519: (14240000, 10260384), #若菜用バトラーハート
+	20050520: (14380000, 10260385), #白用バトラーハート
+	20050521: (14370000, 10260386), #黒用バトラーハート
 	#桃
 	20050147: (10260000, 10260065), #ネコマタ（桃）用おでかけパーカー
 	20050191: (10260000, 10260086), #ネコマタ（桃）用メイド服
