@@ -1,6 +1,9 @@
+2012-11-26
+	update pet pict script
+	client 351+ texture missing, still wait fix.
+
 2012-11-22
 	update database to 351
-	chara6 texture broken, wait fix?
 
 2012-11-05
 	update item category script
